# eure

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EURE_PROJECT_STATUS_REPORT.md  Eure.eure  Makefile  README.md  example.eure  example.schema.eure  variant-validation-issues-update.md
crates/eure/: Cargo.toml  README.md
crates/eure-cli/: Cargo.toml  README.md
crates/eure-cli/src/: args.rs  main.rs  util.rs
crates/eure-cli/tests/: extension_namespace_test.rs  schema_aware_json.rs  value_visitor_test.rs
crates/eure-codegen/: Cargo.toml  README.md
crates/eure-codegen-ir/: Cargo.toml  README.md
crates/eure-codegen-ir/src/: build_check.rs  codegen.rs  emission.rs  error.rs  ids.rs  lib.rs  module.rs  rust_binding.rs  schema.rs  structural.rs  value.rs
crates/eure-codegen-ir/tests/: codegen_builder_defaults.rs  codegen_metadata_fidelity.rs  emission_gating.rs  structural_eq.rs  validate_invariants.rs  value_fidelity.rs
crates/eure-codegen/src/: config.rs  emit_rust.rs  ir_adapter.rs  lib.rs  parse.rs
crates/eure-config/: Cargo.toml
crates/eure-config/src/: lib.rs
crates/eure-derive/: Cargo.toml
crates/eure-derive/examples/: basic_usage.rs  debug_schema.rs  test_enum_validator.rs
crates/eure-derive/src/: lib.rs
crates/eure-derive/tests/: comprehensive_tests.rs  eure_attributes_test.rs  option_handling_test.rs  range_literals_test.rs  serde_attributes_test.rs  serde_default_test.rs  serde_deny_unknown_fields_test.rs  serde_transparent_test.rs  simple_test.rs  validator_integration_test.rs
crates/eure-dev/: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package-lock.json  tailwind.css  tsconfig.json  wrangler.toml
crates/eure-dev/assets/: readme.eure  readme.schema.eure
crates/eure-dev/src/: editor.rs  main.rs  theme.rs  tracer.rs  worker.ts
crates/eure-doc-builder/: Cargo.toml
crates/eure-doc-builder/assets/: adr.schema.eure  nav.schema.eure
crates/eure-doc-builder/examples/: migrate-docs.rs
crates/eure-doc-builder/src/: lib.rs  migrate.rs  site.rs
crates/eure-document/: Cargo.toml  README.md
crates/eure-document/src/: data_model.rs  document.rs  eure_macro.rs  identifier.rs  layout.rs  lib.rs  map.rs  must_be.rs  parse.rs  path.rs  plan.rs  proxy.rs  source.rs  text.rs  tree.rs  value.rs  write.rs
crates/eure-document/tests/: write_map_custom_key.rs  write_map_object_key.rs
crates/eure-editor-support/: Cargo.toml  README.md
crates/eure-editor-support/src/: assets.rs  completion_analyzer.rs  completion_context_tracker.rs  completions.rs  config.rs  cst_path_extractor.rs  diagnostics.rs  error.rs  errors.rs  lib.rs  parser.rs  path_context.rs  schema.rs  schema_validation.rs  semantic_token.rs  semantic_tokens.rs
crates/eure-editor-support/tests/: cache_validation_test.rs  completion_basic_test.rs  completion_multiple_fields_test.rs  completion_nested_context_test.rs  completions_test.rs  cst_path_test.rs  debug_completion_test.rs  diagnostic_span_test.rs  no_hardcoded_completions_test.rs  schema_validation_test.rs
crates/eure-env/: Cargo.toml  README.md
crates/eure-env/src/: lib.rs
crates/eure-fmt/: Cargo.toml  README.md
crates/eure-fmt/src/: builder.rs  config.rs  doc.rs  lib.rs  printer.rs  source.rs  unformat.rs
crates/eure-fmt/tests/: formatter_test.rs
crates/eure-gen/: Cargo.toml  README.md
crates/eure-gen/src/: ast_type_generator.rs  constructor_generator.rs  main.rs
crates/eure-json/: Cargo.toml  README.md
crates/eure-json-schema/: Cargo.toml  README.md
crates/eure-json-schema/src/: eure_to_json_schema.rs  json_schema.rs  lib.rs  query.rs
crates/eure-json/benches/: conversion.rs
crates/eure-json/src/: config.rs  convert.rs  error.rs  format.rs  lib.rs  test_format.rs  tests.rs
crates/eure-json/tests/: cst_formatter_test.rs  hole_value_test.rs
crates/eure-lint/: Cargo.toml  README.md
crates/eure-ls/: Cargo.toml  README.md
crates/eure-ls/src/: asset_locator.rs  capabilities.rs  executor.rs  io_pool.rs  lib.rs  main.rs  native.rs  queries.rs  types.rs  uri_utils.rs  wasm.rs  wasm_api.rs
crates/eure-macros/: .gitignore  Cargo.toml  README.md
crates/eure-macros/src/: build_schema.rs  codegen_ir_adapter.rs  config.rs  context.rs  emit_ir_common.rs  from_eure.rs  into_document.rs  into_eure.rs  ir_spans.rs  lib.rs  must_be_text.rs  object_key.rs  parse_document.rs  util.rs
crates/eure-macros/tests/: tests.rs
crates/eure-mark/: .gitignore  Cargo.toml  README.md
crates/eure-mark/examples/: migrate-docs.rs
crates/eure-mark/src/: article.rs  check.rs  docs.rs  document.rs  error.rs  lib.rs  migrate.rs  query.rs  reference.rs  report.rs
crates/eure-parol/: Cargo.toml  README.md  eure.par
crates/eure-parol/src/: error.rs  grammar.rs  grammar_trait.rs  lib.rs  parser.rs  tree.rs
crates/eure-schema/: Cargo.toml  README.md  test_parser.rs
crates/eure-schema/examples/: test_inline_extraction.rs  test_serde_rename_all.rs  test_simple_array.rs  test_type_extraction.rs  test_variant_validation.rs
crates/eure-schema/src/: build.rs  builder.rs  codegen.rs  convert.rs  document_schema.rs  document_validator.rs  error.rs  extractor.rs  identifiers.rs  impls.rs  interop.rs  lib.rs  parse.rs  schema.rs  schema_document.rs  synth.rs  to_source.rs  tree_validator.rs  type_path_trace.rs  utils.rs  validate.rs  validator.rs  value_api.rs  value_schema.rs  value_validator.rs  write.rs
crates/eure-schema/tests/: basic_extraction_test.rs  debug_actual_variant_syntax.rs  debug_dollar_field.rs  debug_inline_schema.rs  debug_inline_type.rs  debug_internally_tagged.rs  debug_parsed_structure.rs  debug_pure_schema_test.rs  integration.rs  (+35 more)
crates/eure-template/: Cargo.toml  README.md
crates/eure-toml/: Cargo.toml  README.md
crates/eure-tree/: Cargo.toml  README.md
crates/eure-value/: Cargo.toml  README.md
crates/eure-yaml/: Cargo.toml  README.md
crates/parol-walker/: Cargo.toml
crates/parol-walker-gen/: Cargo.toml
test-suite/: Cargo.toml  README.md
test-suite/src/: case.rs  case_schema.rs  lib.rs  main.rs  parser.rs  runner.rs  scenarios.rs  test_case.rs
test-suite/tests/: suite.rs
(+744 files in other folders)
