[workspace]
resolver = "2"
members = ["crates/*", "test-suite"]

[workspace.package]
version = "0.1.5"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/Hihaheho/eure"
homepage = "https://eure.dev"

[workspace.dependencies]
ahash = { version = "0.8.11", default-features = false }
annotate-snippets = "0.12"
anyhow = "1"
automod = "1"
catppuccin = { version = "2.6.0", features = ["css-colors"] }
clap = "4.5"
eros = "0.5"
eure = { path = "crates/eure", version = "0.1.5" }
eure-codegen = { path = "crates/eure-codegen", version = "0.1.5" }
eure-env = { path = "crates/eure-env", version = "0.1.5" }
eure-document = { path = "crates/eure-document", version = "0.1.5" }
eure-fmt = { path = "crates/eure-fmt", version = "0.1.5" }
eure-json = { path = "crates/eure-json", version = "0.1.5" }
eure-json-schema = { path = "crates/eure-json-schema", version = "0.1.5" }
eure-lint = { path = "crates/eure-lint", version = "0.1.5" }
eure-ls = { path = "crates/eure-ls", version = "0.1.5" }
eure-macros = { path = "crates/eure-macros", version = "0.1.5" }
eure-mark = { path = "crates/eure-mark", version = "0.1.5" }
eure-parol = { path = "crates/eure-parol", version = "0.1.5" }
eure-schema = { path = "crates/eure-schema", version = "0.1.5" }
eure-template = { path = "crates/eure-template", version = "0.1.5" }
eure-toml = { path = "crates/eure-toml", version = "0.1.5" }
eure-tree = { path = "crates/eure-tree", version = "0.1.5" }
eure-yaml = { path = "crates/eure-yaml", version = "0.1.5" }
indexmap = { version = "2", default-features = false }
lsp-types = "0.97.0"
num-bigint = "0.4"
num-traits = "0.2"
parol = "4.2"
parol_runtime = "4"
regex = "1.11"
scnr2 = "0.3.3"
serde = "1"
serde-eure = { path = "crates/serde-eure", version = "0.1.5" }
serde_json = "1"
thiserror = { version = "2.0", default-features = false }
thisisplural = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
query-flow = "0.17"
glob = "0.3"
url = "2"
reqwest = { version = "0.13", features = ["blocking"] }
criterion = "0.5"

# For faster parser generation
[profile.dev.package.parol]
opt-level = 3

# For faster favicon generation in eure-dev build.rs
[profile.dev.package.resvg]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
