[package]
name = "test-suite"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "test_suite"
path = "src/lib.rs"

[[bin]]
name = "test-suite"
path = "src/main.rs"

[dependencies]
ahash.workspace = true
annotate-snippets.workspace = true
clap = { workspace = true, features = ["derive"] }
eros.workspace = true
eure = { workspace = true }
eure-document.workspace = true
eure-fmt.workspace = true
eure-json.workspace = true
eure-json-schema.workspace = true
eure-mark.workspace = true
eure-schema.workspace = true
eure-toml.workspace = true
rayon = "1.10"
serde_json.workspace = true
thiserror.workspace = true
toml_edit = "0.22"
