[package]
name = "eure-cli"
version = "0.1.2"
edition = "2024"
description = "Command-line tool for Eure format conversion and validation"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["cli", "conversion", "eure", "validation"]

[[bin]]
name = "eure"
path = "src/main.rs"

[dependencies]
ahash = { workspace = true }
automod = { workspace = true }
catppuccin = { workspace = true, features = ["css-colors"] }
clap = { workspace = true, features = ["derive"] }
eure = { workspace = true }
eure-config = { workspace = true, features = ["all"] }
eure-document = { workspace = true }
eure-fmt = { workspace = true, features = ["unformat"] }
eure-json = { workspace = true }
eure-mark = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
toml = "0.9"
eure-toml = { workspace = true }
eure-tree = { workspace = true }
eure-yaml = { workspace = true }
glob = "0.3"
maud = "0.27.0"
nu-ansi-term = "0.50"
petgraph = "0.8.1"
serde_json = { workspace = true }
