[package]
name = "eure-codegen-ir"
version.workspace = true
edition.workspace = true
description = "Canonical intermediate representation for Eure code generation"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "codegen", "ir", "schema"]

[dependencies]
bon = "3"
indexmap = { workspace = true, features = ["std"] }
num-bigint = { workspace = true }
thiserror = { workspace = true }
