[package]
name = "eure-codegen"
version = "0.1.2"
edition = "2024"
description = "Code generation from Eure schemas"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["codegen", "eure", "schema"]

[dependencies]
bon = "3"
eure-document = { workspace = true }
eure-macros = { workspace = true }
