[package]
name = "eure-codegen"
version.workspace = true
edition.workspace = true
description = "Code generation from Eure schemas"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["codegen", "eure", "schema"]

[dependencies]
bon = "3"
eure-document = { workspace = true }
eure-macros = { workspace = true }
