[package]
name = "eure-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for EURE schema generation"
license = "MIT OR Apache-2.0"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
readme = "README.md"
keywords = ["eure", "derive", "macro", "schema", "serde"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
eure-schema = { path = "../eure-schema" }
eure-parol = { path = "../eure-parol" }
eure-tree = { path = "../eure-tree" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"