[package]
name = "eure-derive"
version = "0.1.0"
edition = "2024"
description = "Derive macros for Eure schema generation"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["derive", "eure", "macro", "schema", "serde"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
eure-parol = { workspace = true }
eure-schema = { workspace = true }
eure-tree = { workspace = true }
eure-value = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
