[package]
name = "eure-dev"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["router", "web"] }
eure = { workspace = true }
eure-editor-support = { workspace = true }
eure-schema = { workspace = true }
