[package]
name = "eure-dev"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = { workspace = true }
catppuccin = { workspace = true, features = ["css-colors"] }
dioxus = { version = "0.7.0", features = ["logger", "router", "web"] }
eure = { workspace = true }
eure-editor-support = { workspace = true }
eure-json = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
serde_json = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing = { workspace = true }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
dioxus-sdk-storage = "0.7.0"
serde = { workspace = true, features = ["derive"] }
