[package]
name = "eure-dev"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
automod = { workspace = true }
catppuccin = { workspace = true, features = ["css-colors"] }
dioxus = { version = "0.7.0", features = ["logger", "router", "web"] }
eure = { workspace = true }
eure-json = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
query-flow = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing = { workspace = true }
dioxus-free-icons = { version = "0.10.0", features = ["bootstrap"] }
dioxus-sdk-storage = "0.7.0"
serde = { workspace = true, features = ["derive"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
gloo-net = "0.6"
url = { workspace = true }
web-time = "1.1"
js-sys = "0.3"

[features]
default = []
build-image = ["dep:resvg", "dep:image"]

[build-dependencies]
resvg = { version = "0.45", optional = true }
image = { version = "0.25", optional = true }
