[package]
name = "eure-document"
version = "0.1.0"
edition = "2024"
description = "Value type for Eure"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["data-types", "eure", "serialization", "value"]

[dependencies]
indexmap = { workspace = true }
num-bigint = { workspace = true }
regex = { version = "1.11", default-features = false, features = ["unicode"] }
thiserror = { workspace = true }
thisisplural = { workspace = true }

[features]
default = ["std"]
std = ["indexmap/std", "regex/perf"]
