[package]
name = "eure-document"
version.workspace = true
edition.workspace = true
description = "Value type for Eure"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["data-types", "eure", "serialization", "value"]

[dependencies]
indexmap = { workspace = true }
num-bigint = { workspace = true }
regex = { version = "1.11", default-features = false, features = ["unicode"] }
thiserror = { workspace = true }
thisisplural = { workspace = true }

[dev-dependencies]
proptest = "1.9"

[features]
default = ["std"]
std = ["indexmap/std", "regex/perf"]
