[package]
name = "eure-editor-support"
version = "0.1.0"
edition = "2024"
description = "Editor support utilities for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["editor", "eure", "ide", "language-support"]

[dependencies]
anyhow = { workspace = true }
eure-document = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
eure-tree = { workspace = true }
indexmap = { version = "2.0" }
lsp-types = { workspace = true }
tracing = "0.1"
