[package]
name = "eure-fmt"
version = "0.1.4"
edition = "2024"
description = "Formatter for Eure files"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["code-style", "eure", "formatter", "pretty-print"]

[dependencies]
eure-document = { workspace = true }
eure-tree = { workspace = true }
rand = { version = "0.9.1", optional = true }
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
eure-parol = { workspace = true }
rand = { version = "0.9.1" }

[features]
default = []
test = ["unformat"]
unformat = ["dep:rand", "dep:rand_chacha"]
