[package]
name = "eure-fmt"
version.workspace = true
edition.workspace = true
description = "Formatter for Eure files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["code-style", "eure", "formatter", "pretty-print"]

[dependencies]
eure-document = { workspace = true }
eure-tree = { workspace = true }
rand = { version = "0.9.1", optional = true }
rand_chacha = { version = "0.3.1", optional = true }

[dev-dependencies]
eure-parol = { workspace = true }
rand = { version = "0.9.1" }

[features]
default = []
test = ["unformat"]
unformat = ["dep:rand", "dep:rand_chacha"]
