[package]
name = "eure-gen"
description = "Code generator for Eure workspace (parol, schema)"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
parol.workspace = true
parol-walker-gen = { path = "../parol-walker-gen" }
quote = "1"
prettyplease = "0.2"
syn = { version = "2", default-features = false, features = [
	"full",
	"parsing",
	"printing",
] }
proc-macro2 = "1"
convert_case = "0.8.0"
