[package]
name = "eure-json-schema"
version = "0.1.3"
edition = "2024"
description = "JSON Schema compatibility for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["eure", "json-schema", "schema", "validation"]

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-json = { workspace = true }
eure-schema = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
query-flow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
