[package]
name = "eure-json-schema"
version.workspace = true
edition.workspace = true
description = "JSON Schema compatibility for Eure format"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "json-schema", "schema", "validation"]

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-json = { workspace = true }
eure-schema = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
query-flow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
