[package]
name = "eure-json"
version = "0.1.0"
edition = "2024"
description = "JSON conversion support for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["conversion", "eure", "json", "serialization"]

[dependencies]
ahash = { workspace = true }
eure = { workspace = true }
eure-document = { workspace = true }
eure-fmt = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
