[package]
name = "eure-json"
version.workspace = true
edition.workspace = true
description = "JSON conversion support for Eure format"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["conversion", "eure", "json", "serialization"]

[dependencies]
ahash = { workspace = true }
eure = { workspace = true }
eure-document = { workspace = true }
eure-fmt = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
query-flow = { workspace = true }
eure-parol = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
eure-tree = { workspace = true }

[[bench]]
name = "conversion"
harness = false
