[package]
name = "eure-lint"
version = "0.1.1"
edition = "2024"
description = "Linter for Eure files"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["eure", "lint", "linter", "static-analysis"]

[dependencies]
