[package]
name = "eure-ls"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for Eure"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "ide", "language-server", "lsp"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
omit-default-module-path = true

[lib]
crate-type = ["cdylib", "rlib"]

# Binary only builds for native targets (not WASM)
# Use `cargo build --lib` for WASM builds
[[bin]]
name = "eurels"
path = "src/main.rs"
required-features = ["http"]

[features]
default = []
http = ["eure/http"]

[dependencies]
anyhow.workspace = true
eure = { workspace = true }
eure-env = { workspace = true }
eure-schema = { workspace = true }
lsp-types = "0.97.0"
percent-encoding = "2.3"
query-flow = { workspace = true }
serde.workspace = true
serde_json.workspace = true

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossbeam-channel = "0.5"
glob.workspace = true
lsp-server = "0.7.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
url = { workspace = true }
