[package]
name = "eure-macros"
version = "0.1.1"
edition = "2024"
description = "Derive macros for Eure schema generation"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["derive", "eure", "macro", "schema", "serde"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.10"
darling = "0.23.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[dev-dependencies]
automod = { workspace = true }
eure = { workspace = true }
eure-document = { workspace = true }
eure-schema = { workspace = true }
thiserror = { workspace = true }
