[package]
name = "eure-mark"
version.workspace = true
edition.workspace = true
description = "Eure Markdown document format"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "markdown", "document"]

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-parol = { workspace = true }
eure-tree = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
query-flow = { workspace = true }

[dev-dependencies]
