[package]
name = "eure-mark"
version.workspace = true
edition.workspace = true
description = "Generic article and page renderer for Eure-authored content"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "MPL-2.0"
keywords = ["eure", "html", "blog", "ssg"]

[features]
default = []
eure-highlight = []

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-parol = { workspace = true }
eure-tree = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
query-flow = { workspace = true }
maud = "0.27.0"
markdown = "1"
giallo = { version = "0.3", features = ["dump"] }

[dev-dependencies]
