[package]
name = "eure-parol"
version = "0.1.0"
edition = "2024"
description = "Eure parser implementation using Parol"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["eure", "grammar", "parser", "serialization"]

[dependencies]
anyhow = { workspace = true }
eure-tree = { workspace = true }
parol_runtime.workspace = true
scnr2.workspace = true
thiserror = { workspace = true }
thisisplural = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3"
