[package]
name = "eure-parol"
version.workspace = true
edition.workspace = true
description = "Eure parser implementation using Parol"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "grammar", "parser", "serialization"]

[dependencies]
anyhow = { workspace = true }
eure-tree = { workspace = true }
parol_runtime.workspace = true
scnr2.workspace = true
thiserror = { workspace = true }
thisisplural = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.3"
