[package]
name = "eure-schema"
version = "0.1.0"
edition = "2024"
description = "Schema specification and validation for Eure"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["eure", "schema", "specification", "validation"]

[dependencies]
ahash = { workspace = true }
# Optional dependencies for external crate support
chrono = { version = "0.4", optional = true }
convert_case = "0.9"
# Optional derive macro support
eure-derive = { workspace = true, optional = true }
eure-parol = { workspace = true }
eure-tree = { workspace = true }
eure-value = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
num-bigint = { workspace = true }
regex = { workspace = true }
semver = { version = "1.0", optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { version = "2.0", optional = true }
uuid = { version = "1.0", optional = true }

[dev-dependencies]
eure = { workspace = true }

[features]
default = []
chrono = ["dep:chrono"]
derive = ["dep:eure-derive"]
semver = ["dep:semver"]
url = ["dep:url"]
uuid = ["dep:uuid"]
